# garbage

./: .gitignore
adventofcode/: day1.py  day10.py  day11.py  day12_input.txt  day12_test.txt  day13_input.txt  day15.py  day16.py  day17.py  day2.py  day21.py  day21_input.txt  day21_test.txt  day22.py  day23_readable.txt  day24.py  day3.py  day4.py  day5.py  day6.py  day7.py  day9.py  template.py
adventofcode/2016/: day1.py  day2.py  day3.py
adventofcode/2017/: day10.py  day12.py  day13.py  day13_test.txt  day14.py  day18.py  day19.py  day20.py  day20_input.txt  day23.py  day25.py  day8.py  day9.py  template.py
adventofcode/2018/: day1.py  day2.py  day3.py  day4.py  day5.py  day6.py
adventofcode/2019/: day1.py  day10.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day7_scratch.txt  day8.py  day9.py
adventofcode/2020/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day19_sample.txt  day2.py  day20.py  day21.py  day22.py  day23.c  day23.py  day24.py  day25.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
adventofcode/2021/: day1.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
adventofcode/2022/: day1.py  day10.py  day11.py  day12.py  day13.py  day2.py  (+19 more)
asio/: daytime_client.cpp  daytime_server.cpp  main.cpp  meson.build
emscripten_scratch/: README.md  index.html  index.js  index.wasm  main.c
haskell/: Readme.md
lis.py/: lis.py
math_for_gamedev/: ch2_vectors.py
(+42 files in other folders)
